gengxin jige wenjian / update some files

--- a/MyWiki/MyWiki.wiki
+++ b/MyWiki/MyWiki.wiki
@@ -6,7 +6,7 @@ db_filename =
 wikiwidehistory_maxentries = 100
 footnotes_as_wikiwords = False
 versioning_storagelocation = 0
-last_wiki_word = MyWiki
+last_wiki_word = ScratchPad
 hotkey_showhide_bywiki = 
 log_window_autoshow = Gray
 filestorage_identity_filenamemustmatch = False
@@ -18,7 +18,7 @@ tabs_maxcharacters = 0
 trashcan_askondelete = True
 wiki_icon = 
 headingsasaliases_depth = 0
-wiki_mainarea_auiperspective = v1/5959ee9d0000003d00000002=*DocPagePresenter=MyWiki=0=textedit\x7cwikipage/MyWiki@layout2|name=dummy;caption=;state=67372030;dir=3;layer=0;row=0;pos=0;prop=100000;bestw=245;besth=155;minw=245;minh=155;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1;notebookid=-1;transparent=255|name=5959ee9d0000003d00000002;caption=;state=67372028;dir=5;layer=0;row=0;pos=0;prop=100000;bestw=200;besth=200;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1;notebookid=-1;transparent=255|dock_size(5,0,0)=202|
+wiki_mainarea_auiperspective = v1/5959ee9d0000003d00000002=*DocPagePresenter=ScratchPad=0=textedit\x7cwikipage/ScratchPad@layout2|name=dummy;caption=;state=67372030;dir=3;layer=0;row=0;pos=0;prop=100000;bestw=311;besth=226;minw=311;minh=226;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1;notebookid=-1;transparent=255|name=5959ee9d0000003d00000002;caption=;state=67372028;dir=5;layer=0;row=0;pos=0;prop=100000;bestw=200;besth=200;minw=-1;minh=-1;maxw=-1;maxh=-1;floatx=-1;floaty=-1;floatw=-1;floath=-1;notebookid=-1;transparent=255|dock_size(5,0,0)=202|
 wiki_name = MyWiki
 tree_expandednodes_rememberduration = 2
 wikipagetitleprefix = 
@@ -33,7 +33,7 @@ wiki_lasttabssubctrls = textedit
 template_pagenamesre = ^template/
 wikipagetitle_creationmode = 1
 tabhistory_maxentries = 25
-tree_expandednodes_descriptorpathes_main = 
+tree_expandednodes_descriptorpathes_main = wikipage/MyWiki
 wikipagetitle_headinglevel = 2
 wiki_wikilanguage = wikidpad_default_2_0
 tree_force_scratchpad_visibility = True
