--- a/MyWiki/data/ScratchPad.wiki
+++ b/MyWiki/data/ScratchPad.wiki
@@ -1,2 +1,103 @@
 ﻿++ Scratch Pad
 
+import a tool: ok
+1. download zip(upload for share,and release namecloud)
+2. unpack to local tool folder
+3. setup sync.config
+4. open sync.exe
+5. add to repository
+
+
+check screen windows: 
+1. 111111 zip/apk/ipa file
+    1)localcache
+    2)downloadlink
+    3)sharecodeupdate
+2. 2222 setting.cfg
+3. 33333 
+4. 4444
+5. 555
+6. 6666
+7. 777
+
+check working folder
+1. 
+
+52314SHDFZ
+
+
+[Pcmanager]items for uni handle
+~ zip collection upload
+    ~ release share link poster
+
+    
+Exemuma？
+
+
+gobye
+bgm
+clicktime
+voice
+__
+
+newchildonlinelink(class define)
+1. 1111Find a posion from wechat new cominer(close the door for mointer it single!)
+2. 22222get key name
+3. 333333set key name
+4. 4444
+5. 55555
+6. 66666broad to ouside
+7. 7777
+8. 88888
+9. 9999
+10. object: one of following occur
+    1)see it activate in another place(how to..)
+        ifsleep try open the window and keep the server open.
+    2)auto exit
+    3)get a taker
+    4)timeout for next classtime
+    
+PIANO：waiguo class monitor hardware login..  (need a sounder, use mobile as )
+paint
+count
+add
+noise        
+sleep
+
+weichator loop pattern..
+
+bookgrowup mode..
+
+plan:
+makea sounder
+
+air:
+trafficmanager crossroadrule
+olympicgame winrule
+stage roleplace
+bio personalclock
+forest circle
+
+
+
+successindoingsth:
+garbgerecycle(bunengxiaohuadedongxi,shengtaihjing)gb2132
+onlinedevelop(remote)cmcc2
+linkmypageair(whose)keneng
+namespacrshell(multi)ruhui
+resousestorage(water)thinking
+
+
+
+
+
+
+
+
+
+
+
+
+
+txtGame：测谎遗忘洗脑套路催眠测试跟踪调试托管编译
+
